fix transparent header on mobile

--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -230,6 +230,10 @@
     justify-content: space-between;
     margin: 0 2rem;
   }
+
+  .header-main {
+    background: #ffffff;
+  }
 }
 
 @media (max-width: 1220px) {
